--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0", // installé automatiquement avec Vite
+    "react": "^19.1.0", 
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1"
   },
@@ -20,8 +20,8 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0", // vérification règles spécifiques aux hooks React
-    "eslint-plugin-react-refresh": "^0.4.19", // éviter les erreurs avec le hot reload de Vite -> affiche instantanément les changements dans le navigateur (rafraîchissement automatique)
+    "eslint-plugin-react-hooks": "^5.2.0", 
+    "eslint-plugin-react-refresh": "^0.4.19", 
     "globals": "^16.0.0",
     "sass": "^1.89.2",
     "vite": "^6.3.5"
